--- a/demo/index.html
+++ b/demo/index.html
@@ -103,5 +103,5 @@
 <!-- _____ DEMO -->
 <script src="pages/_homepage/homepageCtrl.js"></script>
 <script src="pages/demoEditor/demoEditorCtrl.js"></script>
-
+<script src="pages/demoForm/demoFormCtrl.js"></script>
 </html>
