--- a/demo/pages/demoForm/code/directive.html
+++ b/demo/pages/demoForm/code/directive.html
@@ -1,1 +1,8 @@
-<my-user user="myUser"></my-user>
+<my-form></my-form>
+
+<!--<demo-json-editor height    =   "maxHeight"
+                  options   =   "myOptions"
+                  callback  =   "myCallback"
+                  listeners =   "myListener"
+                  json      =   "myJson"></demo-json-editor>
+                  -->
