--- a/src/modules/forms/directives/my-form/myFormView.html
+++ b/src/modules/forms/directives/my-form/myFormView.html
@@ -1,1 +1,16 @@
-Hello world kjkjkjkj :)
+<form name="myForm">
+
+    <div layout="column" >
+        <md-input-container >
+            <label>FirstName</label>
+            <input name="name" ng-model="name" />
+        </md-input-container>
+
+        <md-input-container >
+            <label>LastName</label>
+            <input name="name" ng-model="lastname" />
+        </md-input-container>
+    </div>
+
+
+</form>
