--- a/src/modules/forms/directives/my-form/myFormView.html
+++ b/src/modules/forms/directives/my-form/myFormView.html
@@ -1,16 +1,22 @@
-<form name="myForm">
+<form name="myForm" ng-submit="validUser(myUser)">
 
     <div layout="column" >
         <md-input-container >
             <label>FirstName</label>
-            <input name="name" ng-model="name" />
+            <input name="name" ng-model="myUser.firstname" />
         </md-input-container>
 
         <md-input-container >
             <label>LastName</label>
-            <input name="name" ng-model="lastname" />
+            <input name="name" ng-model="myUser.lastname" />
         </md-input-container>
     </div>
+
+
+    <md-button type="submit">
+        <md-icon md-svg-src="material-design:done"></md-icon>
+        Valider
+    </md-button>
 
 
 </form>
