--- a/src/modules/forms/directives/my-form/myFormView.html
+++ b/src/modules/forms/directives/my-form/myFormView.html
@@ -1,4 +1,4 @@
-<form name="myForm" ng-submit="validUser(myUser)">
+<form name="myForm" ng-submit="actions.onValid(myUser)">
 
     <div layout="column" >
         <md-input-container >
