--- a/demo/pages/_templates/sidenav.html
+++ b/demo/pages/_templates/sidenav.html
@@ -68,7 +68,7 @@
                 <span flex></span>
             </md-button>
 
-            <md-button href="https://github.com/Kiwouz/eklabs.angularStarterPack" target="_blank" class="demo-font"  arial-label="close sidenav">
+            <md-button href="https://github.com/lucasmorel/ttc-chat" target="_blank" class="demo-font"  arial-label="close sidenav">
                 <md-icon md-svg-src="material-design:widget" class="demo-font"></md-icon>
                 <span>Dev Portal</span>
                 <span flex></span>
