--- a/demo/index.html
+++ b/demo/index.html
@@ -104,5 +104,5 @@
 <script src="pages/_homepage/homepageCtrl.js"></script>
 <script src="pages/demoEditor/demoEditorCtrl.js"></script>
 <script src="pages/demoform/demoFormCtrl.js"></script>
-
+<script src="pages/demoTchat/demoTchatCtrl.js"></script>
 </html>
