--- a/src/modules/tchat/directives/my-tchat/myTchatView.html
+++ b/src/modules/tchat/directives/my-tchat/myTchatView.html
@@ -17,7 +17,7 @@
                     <div class="panel-heading">
                         <span class="glyphicon glyphicon-comment"></span> Chat
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="">
                         <ul class="chat" id="messages">
 
                         </ul>
