--- a/src/modules/tchat/directives/my-tchat/myTchatView.html
+++ b/src/modules/tchat/directives/my-tchat/myTchatView.html
@@ -53,6 +53,9 @@
     .popup-box-on {
         display: block !important;
     }
+    .popup-box-off{
+        display: none ;
+    }
     .popup-box .popup-head {
         background-color: #fff;
         clear: both;
@@ -132,6 +135,10 @@
         height: 275px;
         overflow: auto;
     }
+    .popup-box2 {
+        height: 50px;
+    }
+
     .direct-chat-messages {
         overflow: auto;
         padding: 10px;
@@ -321,33 +328,28 @@
 
 </style>
 <form name="myTchat" >
-    <div class="container text-center">
-        <div class="row">
-            <h2>Open in chat (popup-box chat-popup)</h2>
-            <h4>Click Here</h4>
-            <div class="round hollow text-center">
-                <a  id="addClass"><span class="glyphicon glyphicon-comment"></span> Open in chat </a>
-            </div>
-
-        </div>
-    </div>
-
-
-    <div class="popup-box chat-popup" id="qnimate">
+    <div class="popup-box chat-popup" id="qnimate" >
         <!-- header à laisser afficher -->
-        <div class="popup-head" class="popup-box-on" >
+        <div class="popup-head" >
             <div class="popup-head-left pull-left"><img src="http://bootsnipp.com/img/avatars/bcf1c0d13e5500875fdd5a7e8ad9752ee16e7462.jpg" alt="iamgurdeeposahan"> Gurdeep Osahan</div>
             <div class="popup-head-right pull-right">
                 <button data-widget="remove" id="removeClass" class="chat-header-button pull-right" type="button"><i class="glyphicon glyphicon-off"></i></button>
             </div>
         </div>
-        <div id="qnimate">
+
             <div class="popup-messages">
                 <div class="direct-chat-messages">
                 </div>
             </div>
             <div class="popup-messages-footer">
                 <textarea id="status_message" placeholder="Type a message..." rows="10" cols="40" name="message"></textarea>
+            </div>
+    </div>
+    <div class="popup-box2 popup-box chat-popup popup-box-on" id="qnimate2">
+        <div class="popup-head">
+            <div class="popup-head-left pull-left"><img src="http://bootsnipp.com/img/avatars/bcf1c0d13e5500875fdd5a7e8ad9752ee16e7462.jpg" alt="iamgurdeeposahan"> Gurdeep Osahan</div>
+            <div class="popup-head-right pull-right">
+                <button data-widget="remove" id="addClass" class="chat-header-button pull-right" type="button"><i class="glyphicon glyphicon-on"></i></button>
             </div>
         </div>
     </div>
@@ -440,10 +442,12 @@
     $(function(){
         $("#addClass").click(function () {
             $('#qnimate').addClass('popup-box-on');
+            $('#qnimate2').removeClass('popup-box-on');
         });
 
         $("#removeClass").click(function () {
             $('#qnimate').removeClass('popup-box-on');
+            $('#qnimate2').addClass('popup-box-on');
         });
     })
 </script>
