--- a/src/modules/tchat/directives/my-tchat/myTchatView.html
+++ b/src/modules/tchat/directives/my-tchat/myTchatView.html
@@ -7,9 +7,8 @@
   file that was distributed with this source code.
  -->
 
-<link rel="stylesheet" href="tchat.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 <style>
     @import url(https://fonts.googleapis.com/css?family=Oswald:400,300);
     @import url(https://fonts.googleapis.com/css?family=Open+Sans);
@@ -332,25 +331,42 @@
         </div>
     </div>
 
+    <div class="popup-head" class="popup-box-on" >
+        <div class="popup-head-left pull-left"><img src="http://bootsnipp.com/img/avatars/bcf1c0d13e5500875fdd5a7e8ad9752ee16e7462.jpg" alt="iamgurdeeposahan"> Gurdeep Osahan</div>
+        <div class="popup-head-right pull-right">
+            <button data-widget="remove" id="removeClass" class="chat-header-button pull-right" type="button"><i class="glyphicon glyphicon-off"></i></button>
+        </div>
+    </div>
 
     <div class="popup-box chat-popup" id="qnimate">
         <!-- header à laisser afficher -->
-        <div class="popup-head" class="popup-box-on" >
-            <div class="popup-head-left pull-left"><img src="http://bootsnipp.com/img/avatars/bcf1c0d13e5500875fdd5a7e8ad9752ee16e7462.jpg" alt="iamgurdeeposahan"> Gurdeep Osahan</div>
-            <div class="popup-head-right pull-right">
-                <button data-widget="remove" id="removeClass" class="chat-header-button pull-right" type="button"><i class="glyphicon glyphicon-off"></i></button>
-            </div>
-        </div>
+
         <div id="qnimate">
             <div class="popup-messages">
                 <div class="direct-chat-messages">
                 </div>
             </div>
             <div class="popup-messages-footer">
-                <textarea id="status_message" placeholder="Type a message..." rows="10" cols="40" name="message"></textarea>
+                <div class="input-group">
+                    <md-input-container class="md-block" flex-gt-sm>
+                        <input id="status_message" placeholder="Entrez votre message" name="message">
+                    </md-input-container>
+                    <span class="input-group-btn" id="msg-input">
+                        <md-button class="md-fab" aria-label="Comment">
+                         <md-icon md-svg-src="material-design:comment"></md-icon>
+                        </md-button>
+                     </span>
+                </div>
             </div>
         </div>
     </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+
+    <!-- Angular Material Library -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 <!--
     <div class="container">
         <div class="row">
